# crystal-picnic

./: CMakeLists.txt  LICENSE.txt  README.md
android/amazon-project/: AndroidManifest.xml
android/amazon-project/jni/: Android.mk
android/amazon-underground-project/: AndroidManifest.xml
android/amazon-underground-project/jni/: Android.mk
android/android-project/: AndroidManifest.xml
android/android-project/jni/: Android.mk
android/cortex-project/: AndroidManifest.xml  build.xml
android/cortex-project/jni/: Android.mk  Application.mk
android/google-admob-project/: AndroidManifest.xml
android/google-admob-project/jni/: Android.mk
android/google-project/: AndroidManifest.xml
android/google-project/jni/: Android.mk
apple/ios/: Crystal Picnic Zero-Info.plist
apple/ios/Crystal Picnic.xcodeproj/: project.pbxproj
apple/mac/: Crystal Picnic copy-Info.plist  Crystal Picnic copy2-Info.plist  Crystal Picnic copy3-Info.plist  Crystal Picnic-Info.plist
data/areas/: global.lua
data/scripts/: global.lua
data/text/: English.utf8  French.utf8  German.utf8
diffs/: allegro_googleplay.diff
docs/: ReadMe.txt
icons/: icon.icns
include/: android.h  animation.h  animation_set.h  area_loop.h  area_manager.h  astar.h  astar_character_role.h  atlas.h  atlas_internal.h  audio_config_loop.h  battle_ai.h  battle_entity.h  battle_loop.h  battle_pathfind.h  battle_transition_in.h  bitmap.h  bones.h  camera.h  character_map_entity.h  character_role.h  collidable.h  collision_detection.h  config.h  cpa.h  credits_loop.h  crystal_loop.h  crystalpicnic.h  difficulty_loop.h  direct3d.h  dirty.h  enemy_avatar.h  enemy_avatar_wander_character_role.h  engine.h  equipment.h  follow_character_role.h  frame.h  game_specific_globals.h  gamecenter.h  general.h  graphics.h  (+41 more)
origdata/text/: cpabout.de.txt  cpabout.en.txt  cpabout.fr.txt
src/: android.cpp  animation.cpp  animation_set.cpp  apple.m  area_loop.cpp  area_manager.cpp  astar.cpp  astar_character_role.cpp  atlas.cpp  atlas_accessor.cpp  audio_config_loop.cpp  bass.cpp  bass_fileprocs.cpp  battle_ai.cpp  battle_entity.cpp  battle_loop.cpp  battle_pathfind.cpp  battle_transition_in.cpp  bitmap.cpp  bones.cpp  camera.cpp  character_map_entity.cpp  collidable.cpp  collision_detection.cpp  config.cpp  cpa.cpp  credits_loop.cpp  crystal_loop.cpp  crystalpicnic.cpp  difficulty_loop.cpp  direct3d.cpp  dirty.cpp  enemy_avatar.cpp  enemy_avatar_wander_character_role.cpp  engine.cpp  error.cpp  follow_character_role.cpp  frame.cpp  game_specific_globals.cpp  gamecenter.mm  (+36 more)
tools/: CMakeLists.txt
tools/android/: sign.bat
tools/cpa/: mkcpa-unix.sh  mkcpa.sh
tools/utils/: level_optimizer.cpp
(+125 files in other folders)
